force-app/main/default/objects/BLN_Relationship__c/BLN_Relationship__c.object-meta.xml
<CustomObject>
    <description>FOUK-4871. This is the custom object name as Relationship</description>
    <label>Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>