force-app/main/default/objects/BLN_Relationship__c/fields/BLN_Account__c.field-meta.xml
<CustomField>
    <fullName>BLN_Account__c</fullName>
    <description>FOUK-4871. This field is the reference of Master Details relationship with Account</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.BLN_Level__c</field>
            <operation>equals</operation>
            <value>Legal Entity Account</value>
        </filterItems>
        <filterItems>
            <field>Account.BLN_Level__c</field>
            <operation>equals</operation>
            <value>Country Grouping Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>