force-app/main/default/objects/BLN_Relationship__c/fields/BLN_ContactAttitudeTowardsBelron__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContactAttitudeTowardsBelron__c</fullName>
    <formula>TEXT(BLN_ContactName__r.BLN_AttitudetowardsAutoglass__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Attitude Towards Belron</label>
    <type>Text</type>
</CustomField>