force-app/main/default/objects/BLN_Relationship__c/fields/BLN_ContactDecisionPower__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContactDecisionPower__c</fullName>
    <formula>TEXT( BLN_ContactName__r.BLN_DecisionPower__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Decision Power</label>
    <type>Text</type>
</CustomField>