force-app/main/default/objects/BLN_Relationship__c/fields/BLN_ContactName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContactName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>FOUK-4870</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>