force-app/main/default/objects/BLN_Relationship__c/fields/BLN_ContactPosition__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContactPosition__c</fullName>
    <formula>BLN_ContactName__r.BLN_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Position</label>
    <type>Text</type>
</CustomField>