force-app/main/default/objects/BLN_Relationship__c/fields/BLN_KeyConclusions__c.field-meta.xml
<CustomField>
    <fullName>BLN_KeyConclusions__c</fullName>
    <description>FOUK-4873. This field is the reference of Key Conclusions.</description>
    <label>Key Conclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>