force-app/main/default/objects/BLN_Relationship__c/fields/BLN_RelationshipHealth__c.field-meta.xml
<CustomField>
    <fullName>BLN_RelationshipHealth__c</fullName>
    <description>FOUK-4871. This field is the reference of Relationship Health</description>
    <label>Relationship Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Desired Contact</fullName>
                <default>true</default>
                <label>Desired Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>