force-app/main/default/objects/BLN_Relationship__c/fields/BLN_UserName__c.field-meta.xml
<CustomField>
    <fullName>BLN_UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4871. This field is the reference of relationship with User</description>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>